--- a/tables-exercise/Exercise-2/css/style.css
+++ b/tables-exercise/Exercise-2/css/style.css
@@ -1,6 +1,6 @@
 table {
   border-collapse: collapse;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 14px;
 }
 
@@ -15,7 +15,7 @@ tbody {
 
 th,
 td {
-  padding: 10px 15px;
+  padding: 10px;
   border: 2px solid #0000008c;
   vertical-align: middle;
 }
@@ -32,6 +32,9 @@ tbody td:nth-child(2) {
   font-style: italic;
 }
 
+tbody td:last-child {
+  text-transform: uppercase;
+}
 caption {
   text-align: left;
 }
