--- a/portfolio/starter-code/style/style.css
+++ b/portfolio/starter-code/style/style.css
@@ -4,10 +4,10 @@
 }
 
 header {
-  display: flex;
-  flex-wrap: wrap;
+  margin-top: 39px;
+  margin-left: 165px;
+  margin-right: 165px;
   background-color: #151515;
-  justify-content: space-between;
 }
 body {
   background-color: #151515;
@@ -15,13 +15,65 @@ body {
 
 footer {
   background-color: #979797;
+  margin-left: 165px;
+  margin-right: 165px;
 }
 h1 {
-  color: aqua;
+  margin: 0px;
+  font-size: 88px;
+  color: #ffffff;
+  font-weight: 700;
+  line-height: 88px;
+  letter-spacing: -2.5px;
+  display: block;
+}
+
+main {
+  margin-left: 165px;
+  margin-right: 165px;
+}
+.text-18-500 {
+  font-family: "Space Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  color: #d9d9d9;
+}
+
+.text-48-700 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  letter-spacing: -1.5px;
+  text-align: left;
+}
+
+.text-88-700 {
+  margin: 0px;
+  font-size: 88px;
+  color: #ffffff;
+  font-weight: 700;
+  line-height: 88px;
+  letter-spacing: -2.5px;
+}
+
+.intro {
+  margin-top: 127px;
+  padding: 10px 5px;
+}
+
+.name {
+  font-size: 32px;
 }
 .head-name .techStack-section {
   display: flex;
   flex-wrap: wrap;
+}
+.head-top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .social-list {
   list-style-type: none;
@@ -29,6 +81,11 @@ h1 {
 
 .techStack-item {
   flex-basis: 33.333333%;
+}
+
+.techStack-section {
+  flex-wrap: wrap;
+  display: flex;
 }
 
 .project-section {
@@ -42,4 +99,26 @@ h1 {
 
 .contact {
   background-color: #979797;
+}
+
+.social {
+  width: 192.5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.social-icon {
+  width: 25px;
+  height: 25px;
+}
+
+.under-18 {
+  text-decoration: underline #4ee1a0 2px;
+  text-underline-offset: 18px;
+  line-height: 26px;
+}
+.under-88 {
+  text-decoration: underline #4ee1a0 6px;
+  text-underline-offset: 18px;
 }
